[package]
name = "topicos-especiais"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system  = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std        = { version = "8.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
ark-ff = "0.5"
ark-ec = "0.5"
ark-ed-on-bls12-381-bandersnatch = "0.5"
rand = "0.8"
rand_chacha = "0.3"
merlin = "3.0"
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

[patch.crates-io]
ark-ff = { git = "https://github.com/arkworks-rs/algebra", branch = "master" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", branch = "master" }

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
]
