[package]
name = "gerenciador_tarefas"
version = "0.1.0"
edition = "2021"
authors = ["caique <caiqueribeiro06@gmail.com>"]

[dependencies]
ink = { version = "5.1.1", default-features = false }
ink_storage = "5.1.1"
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
